[tool.poetry]
name = "icarus-framework"
version = "0.1.0"
description = ""
authors = ["Tommaso Ciussani <tommasoc@student.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyephem = "^9.99"
numpy = "^2.1.2"
scipy = "^1.14.1"
networkx = "^3.3"
plotly = "^5.24.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
antiprism-python = "^0.1.3"
geopy = "^2.4.1"
netcdf4 = "^1.7.1.post2"
compress-pickle = "^2.1.0"
requests = "^2.32.3"
shapely = "^2.0.6"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"